--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -2323,7 +2323,7 @@ output {
     background-color: transparent; }
   .form-control[disabled], .form-control[readonly],
   fieldset[disabled] .form-control {
-    background-color: white;
+    background-color: #eee;
     opacity: 1; }
   .form-control[disabled],
   fieldset[disabled] .form-control {
